Finalizing the home structure.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,40 @@
       </nav> 
     </header> 
 
+    <main>
+
+      <section class="home" id="home">
+        <div class="home__container">
+          <div class="home__content container">
+            <h1 class="home__title">Choose Your Favorite Coffee And Enjoy<span>.</span></h1>
+            <p class="home__description"> Buy the best and delicious coffees.</p> 
+
+            <div class="home__data grid">
+              <div class="home__data-group">
+                <h2 class="home__number">140K</h2>
+                <h3 class="home__subtitle">Testimonials</h3>
+                <p class="home__data-description">Testimonials from various customers who trust us.</p>
+              </div>
+
+              <div class="home__data-group">
+                <h2 class="home__number">340+</h2>
+                <h3 class="home__subtitle">Exclusive Products</h3>
+                <p class="home__data-description">Premium preparation with quality ingredients.</p>
+              </div>
+
+              <a href="#premium">
+                <img src="assets/img/scroll.png" alt="" class="home__scroll">
+              </a> 
+            </div>
+          </div>
+
+        </div>
+
+        <img src="assets/img/home.png" alt="chemex coffe" class="home__img">
+      </section>
+
+    </main> 
+
     <script src="assets/js/main.js"></script>
   </body>
 </html>
