Finalizing the structure of the specialties section.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <section class="home" id="home">
         <div class="home__container">
-          <div class="home__content container">
+          <div class="home__conent container">
             <h1 class="home__title">Choose Your Favorite Coffee And Enjoy<span>.</span></h1>
             <p class="home__description"> Buy the best and delicious coffees.</p> 
 
@@ -67,6 +67,38 @@
 
         <img src="assets/img/home.png" alt="chemex coffe" class="home__img">
       </section>
+
+      <section class="specialty container section" id="specialty">
+        <div class="sepcialty__container">
+          <div class="specialty__box">
+            <h2 class="section__title">Specialty coffees that make you happy and cheer you up!</h2>
+            <a href="#" class="btn specialty__btn">See More</a>
+          </div>
+
+          <div class="specialty__category grid">
+            <div class="specialty__group">
+              <img src="assets/img/specialty1.png" alt="beans coffe" class="specialty__img">
+              <h2 class="specialty__title">Selected Coffee</h2> 
+              <p class="specialty__description">We need the best premium coffee, for a true teste.</p>
+            </div>
+
+            <div class="specialty__group">
+              <img src="assets/img/specialty2.png" alt="cookie" class="specialty__img">
+              <h2 class="specialty__title">Delicious Cookie</h2> 
+              <p class="specialty__description">Enjoy your coffee with some hot cookies.</p>
+            </div>
+
+            <div class="specialty__group">
+              <img src="assets/img/specialty3.png" alt="cookie" class="specialty__img">
+              <h2 class="specialty__title">Enjoy at Home</h2> 
+              <p class="specialty__description">Enjoy the best coffe in the comfort of your house.</p>
+            </div>
+
+          </div> 
+
+        </div>
+      </section> 
+
 
     </main> 
 
