Finalizing the products section.

--- a/index.html
+++ b/index.html
@@ -100,6 +100,167 @@
       </section> 
 
 
+      <section class="products section">
+        <div class="products__container container">
+          <h2 class="section__title">Choose our delicious and best products</h2>
+
+          <ul class="products__filter grid">
+            <li class="products__item">
+              <h3 class="products__title">New Delicacies</h3>
+              <span class="products__stock">3 products</span>
+            </li>
+
+            <li class="products__item">
+              <h3 class="products__title">Hot Coffee</h3>
+              <span class="products__stock">4 products</span>
+            </li>
+
+            <li class="products__item">
+              <h3 class="products__title">Cakes And Delicacies</h3>
+              <span class="products__stock">4 products</span>
+            </li>
+          </ul>
+
+          <div class="products__content grid">
+            <article class="products__card delicacies">
+              <div class="products__shape">
+                <img src="assets/img/delicacies1.png" alt="cookie" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$5</h2>
+                <h3 class="products__data-title">Cookies</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card delicacies">
+              <div class="products__shape">
+                <img src="assets/img/delicacies2.png" alt="croissant" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$6</h2>
+                <h3 class="products__data-title">Croissant</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card delicacies">
+              <div class="products__shape">
+                <img src="assets/img/delicacies3.png" alt="croissant" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$4</h2>
+                <h3 class="products__data-title">Croissant</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img src="assets/img/coffee1.png" alt="black coffee" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$7</h2>
+                <h3 class="products__data-title">Black Coffe</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img src="assets/img/coffee2.png" alt="pure coffee" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$12</h2>
+                <h3 class="products__data-title">Pure Coffe</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="produtcs__shape">
+                <img src="assets/img/coffee3.png" alt="milk coffee" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$9</h2>
+                <h3 class="products__data-title">Milk Coffe</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img src="assets/img/coffee4.png" alt="coffee" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$10</h2>
+                <h3 class="products__data-title">Moka Coffe</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img src="assets/img/cake1.png" alt="cake" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$8</h2>
+                <h3 class="products__data-title">Cream Cake</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img src="assets/img/cake2.png" alt="chocolate croissant" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$7</h2>
+                <h3 class="products__data-title">Chocolate Croissant</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img src="assets/img/cake3.png" alt="pancake" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$16</h2>
+                <h3 class="products__data-title">Pancake</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+            <article class="products__card coffee">
+              <div class="products__shape">
+                <img src="assets/img/cake4.png" alt="milk cake" class="products__img">
+              </div>
+
+              <div class="products__data">
+                <h2 class="products__price">$13</h2>
+                <h3 class="products__data-title">Milk Cake</h3>
+                <button class="btn products__btn"><i class="bx bx-shopping-bag"></i></button>
+              </div> 
+            </article>
+
+          </div> 
+        </div>
+      </section> 
+
+
+
+
     </main> 
 
     <script src="assets/js/main.js"></script>
