Finalizing the premium section structure.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <section class="home" id="home">
         <div class="home__container">
-          <div class="home__conent container">
+          <div class="home__content container">
             <h1 class="home__title">Choose Your Favorite Coffee And Enjoy<span>.</span></h1>
             <p class="home__description"> Buy the best and delicious coffees.</p> 
 
@@ -100,7 +100,7 @@
       </section> 
 
 
-      <section class="products section">
+      <section class="products section" id="products">
         <div class="products__container container">
           <h2 class="section__title">Choose our delicious and best products</h2>
 
@@ -258,7 +258,36 @@
         </div>
       </section> 
 
+      <section class="quality container section" id="premium">
 
+        <h2 class="section__title">We offer a premium and better quality preparation just for you!</h2>
+
+        <div class="quality__container container grid">
+
+          <div class="quality__content grid">
+
+            <div class="quality__images">
+              <img src="assets/img/quality1.png" alt="" class="quality__img-big">
+              <img src="assets/img/quality2.png" alt="" class="quality__img-small">
+            </div>
+
+            <div class="quality__data">
+              <h1 class="quality__title">Premium Coffee</h1>
+              <h2 class="quality__price">$96.99</h2> 
+              <span class="quality__especial">Especial Price</span>
+              <p class="quality__description">We are delighted with our coffee. That's why you get the best you see in the image, for a special price. premium coffee plus the kettle made of resistant materials that</p>
+
+              <div class="quality__buttons">
+                <button class="btn">Buy Now</button>
+                <a href="#" class="quality__button">See More<i class="bx bx-right-arrow-alt"></i>
+              </div> 
+
+            </div>
+
+          </div>
+
+        </div>
+      </section> 
 
 
     </main> 
