--- a/index.html
+++ b/index.html
@@ -289,6 +289,17 @@
         </div>
       </section> 
 
+      <section class="logos section">
+        <div class="logos__container container grid">
+          <img src="assets/img/logocoffee1.png" alt="coffe logo" class="logo__img">
+          <img src="assets/img/logocoffee2.png" alt="coffe logo" class="logo__img">
+          <img src="assets/img/logocoffee3.png" alt="coffe logo" class="logo__img">
+          <img src="assets/img/logocoffee4.png" alt="coffe logo" class="logo__img">
+          <img src="assets/img/logocoffee5.png" alt="coffe logo" class="logo__img">
+        </div>
+      </section>
+
+
 
     </main> 
 
