Finalizing the blog and footer structure.

--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
         </div>
       </section> 
 
-      <section class="quality container section" id="premium">
+      <section class="quality section" id="premium">
 
-        <h2 class="section__title">We offer a premium and better quality preparation just for you!</h2>
+        <div class="quality__container container">
 
-        <div class="quality__container container grid">
+          <h2 class="section__title">We offer a premium and better quality preparation just for you!</h2>
 
           <div class="quality__content grid">
 
@@ -279,15 +279,14 @@
 
               <div class="quality__buttons">
                 <button class="btn">Buy Now</button>
-                <a href="#" class="quality__button">See More<i class="bx bx-right-arrow-alt"></i>
-              </div> 
+                <a href="#" class="quality__button">See More<i class="bx bx-right-arrow-alt"></i></a>
+              </div>
 
             </div>
 
           </div>
-
         </div>
-      </section> 
+      </section>
 
       <section class="logos section">
         <div class="logos__container container grid">
@@ -299,9 +298,124 @@
         </div>
       </section>
 
+      <section class="blog section" id="blog">
+        <div class="blog__container container">
+          <h2 class="section__title">Our Blogs Coffee with trending topic for this week</h2>
+          <div class="blog__content grid">
+            <div class="blog__card">
+              <div class="blog__image">
+                <img src="assets/img/blog1.png" alt="coffee blog" class="blog__img">
+                <a href="#" class="blog__button"><i class="bx bx-right-arrow-alt"></i></a>
+              </div>
 
+              <div class="blog__data">
+                <h2 class="blog__title">10 Coffee Recomendations</h2>
+                <p class="blog__description">The blogs about coffee will help you a lot about how it is prepared, its waiting time, for a good quality coffee</p>
 
-    </main> 
+                <div class="blog__footer">
+                  <div class="blog__reactions">
+                    <i class="bx bx-comment"></i>
+                    <span>20</span>
+                  </div>
+                  
+                  <div class="blog__reactions">
+                    <i class="bx bx-show"></i>
+                    <span>60.8K</span>
+                  </div>
+                </div> 
+              </div> 
+            </div> 
+
+            <div class="blog__card">
+              <div class="blog__image">
+                <img src="assets/img/blog2.png" alt="coffee blog" class="blog__img">
+                <a href="#" class="blog__button"><i class="bx bx-right-arrow-alt"></i></a>
+              </div>
+
+              <div class="blog__data">
+                <h2 class="blog__title">12 Benefits Of Drinking Coffee</h2>
+                <p class="blog__description">The blogs about coffee will help you a lot about how it is prepared, its waiting time, for a good quality coffee.</p>
+
+                <div class="blog__footer">
+                  <div class="blog__reactions">
+                    <i class="bx bx-comment"></i>
+                    <span>45</span>
+                  </div>
+                  
+                  <div class="blog__reactions">
+                    <i class="bx bx-show"></i>
+                    <span>280.4K</span>
+                    </div>
+                  </div> 
+                </div> 
+
+              </div> 
+            </div>
+
+          </div>
+        </div> 
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <div class="footer__container container">
+        <h1 class="footer__title">Coffee House.</h1>
+        <div class="footer__content grid">
+          <div class="footer__newsletter">
+            <p class="footer__description">Subscribe to our newsletter</p>
+            <input type="text" class="footer__input" placeholder="Your email address">
+            <button class="footer__button"><i class="bx bx-right-arrow-alt"></i></button>
+          </div>
+
+          <div class="footer__data">
+            <h2 class="footer__data-title">Address</h2>
+            <p class="footer__description">
+              BL C - Asa Sul 70374-410<br>
+              Brasília - DF, Brazil 
+              <img src="assets/img/brazil-flag.png" alt="brazil flag">
+            </p>
+          </div> 
+
+          <div class="footer__data">
+            <h2 class="footer__data-title">Contacts</h2>
+            <p class="footer__description">
+              +55 61 99074-1516<br>
+              coffehouse@gmail.com
+            </p>
+          </div> 
+
+          <div class="footer__data">
+            <h2 class="footer__data-title">Office</h2>
+            <p class="footer__description">
+              Monday - Saturday<br>
+              9AM - 10PM
+            </p>
+          </div> 
+        </div>
+
+        <div class="footer__group">
+          <ul class="footer__social">
+            <a href="#" class="footer__social-link" target="_blank">
+              <i class="bx bxl-facebook"></i>
+            </a>
+
+            <a href="#" class="footer__social-link" target="_blank">
+              <i class="bx bxl-instagram"></i>
+            </a>
+
+            <a href="#" class="footer__social-link" target="_blank">
+              <i class="bx bxl-twitter"></i>
+            </a>
+
+          </ul>
+
+          <div class="footer__copy">
+            &#169; Coffee House. All rights reserverd.
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="assets/js/main.js"></script>
   </body>
